--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -11,8 +11,14 @@
     </activity>
     <meta-data android:name="unityplayer.SkipPermissionsDialog" android:value="false" />
     <meta-data android:name="com.oculus.ossplash.background" android:value="black" />
-    <meta-data android:name="com.oculus.telemetry.project_guid" android:value="e329d19e-5bfe-46fd-81fd-7b7698430920" />
+    <meta-data android:name="com.oculus.telemetry.project_guid" android:value="cbca344c-914d-42b4-a237-7adf45608f35" />
     <meta-data android:name="com.oculus.supportedDevices" android:value="quest|quest2|questpro|quest3|quest3s" tools:replace="android:value" />
   </application>
   <uses-feature android:name="android.hardware.vr.headtracking" android:version="1" android:required="true" />
+  <uses-permission android:name="android.permission.CAMERA" />
+  <uses-permission android:name="com.oculus.permission.USE_SCENE" />
+  <uses-permission android:name="com.oculus.permission.USE_ANCHOR_API" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-feature android:name="com.oculus.experimental.enabled" />
+  <uses-feature android:name="com.oculus.feature.BOUNDARYLESS_APP" android:required="true"/>
 </manifest>
